--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-plugin-react-intl": "^3.0.1",
     "express": "^4.16.3",
     "mongodb": "^3.1.4",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-intl": "^2.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
