--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "node scripts/build.js",
     "build:langs": "NODE_ENV='production' babel-node scripts/mergeMessages.js",
-    "build": "npm run build:langs build-css &&  node scripts/build.js",
+    "build:old": "npm run build:langs build-css &&  node scripts/build.js",
+    "build": "npm run build-css &&  node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "proxy": "http://localhost:8080",
